# R.Yui

./: Cargo.toml  README.md
src/: main.rs  shard.rs
src/commands/: about.rs  mod.rs  ping.rs
src/events/: interaction.rs  mod.rs  ready.rs
